customize for Hip

--- a/mobile/src/main/res/layout/layout_header.xml
+++ b/mobile/src/main/res/layout/layout_header.xml
@@ -7,14 +7,14 @@
         android:orientation="vertical"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/background_header"/>
+        android:src="@drawable/background_header_hip"/>
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/drawer_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:text="shadowsocks"
+        android:text="Hip VPN"
         android:gravity="center"
         android:textSize="32sp"
         android:textColor="@android:color/white"/>
