--- a/plugin/src/main/res/values/styles.xml
+++ b/plugin/src/main/res/values/styles.xml
@@ -3,19 +3,28 @@
     <style name="Theme.Shadowsocks.Material" parent="Theme.AppCompat.Light.NoActionBar"/>
     <style name="Theme.ShadowsocksBase" parent="Theme.Shadowsocks.Material">
         <!--suppress NewApi -->
-        <item name="android:navigationBarColor">@color/material_primary_700</item>
-        <item name="colorAccent">@color/material_accent_200</item>
-        <item name="colorButtonNormal">@color/material_accent_200</item>
-        <item name="colorPrimary">@color/material_primary_500</item>
-        <item name="colorPrimaryDark">@color/material_primary_700</item>
+        <!-- <item name="android:navigationBarColor">@color/material_primary_700</item> -->
+        <!-- <item name="colorAccent">@color/material_accent_200</item> -->
+        <!-- <item name="colorButtonNormal">@color/material_accent_200</item> -->
+        <!-- <item name="colorPrimary">@color/material_primary_500</item> -->
+        <!-- <item name="colorPrimaryDark">@color/material_primary_700</item> -->
+        <item name="android:navigationBarColor">#9F3420</item>
+        <item name="colorAccent">@color/hip_accent</item>
+        <item name="colorButtonNormal">@color/hip_accent</item>
+        <item name="colorPrimary">@color/hip_primary</item>
+        <item name="colorPrimaryDark">@color/hip_primary_dark</item>
         <item name="preferenceTheme">@style/Theme.Shadowsocks.PreferenceThemeOverlay</item>
     </style>
 
     <style name="Theme.Shadowsocks.Dialog" parent="Theme.AppCompat.Light.Dialog">
-        <item name="colorAccent">@color/material_primary_500</item>
-        <item name="colorButtonNormal">@color/material_accent_200</item>
-        <item name="colorPrimary">@color/material_primary_500</item>
-        <item name="colorPrimaryDark">@color/material_primary_700</item>
+        <!-- <item name="colorAccent">@color/material_primary_500</item> -->
+        <!-- <item name="colorButtonNormal">@color/material_accent_200</item> -->
+        <!-- <item name="colorPrimary">@color/material_primary_500</item> -->
+        <!-- <item name="colorPrimaryDark">@color/material_primary_700</item> -->
+        <item name="colorAccent">@color/hip_accent</item>
+        <item name="colorButtonNormal">@color/hip_accent</item>
+        <item name="colorPrimary">@color/hip_primary</item>
+        <item name="colorPrimaryDark">@color/hip_primary_dark</item>
         <item name="preferenceTheme">@style/Theme.Shadowsocks.PreferenceThemeOverlay</item>
         <item name="windowNoTitle">true</item>
     </style>
