--- a/mobile/src/main/res/layout/layout_header.xml
+++ b/mobile/src/main/res/layout/layout_header.xml
@@ -9,13 +9,13 @@
         android:scaleType="centerCrop"
         android:src="@drawable/background_header_hip"/>
 
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/drawer_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:text="Hip VPN"
-        android:gravity="center"
-        android:textSize="32sp"
-        android:textColor="@android:color/white"/>
+    <!-- <TextView xmlns:android="http://schemas.android.com/apk/res/android" -->
+    <!--     android:id="@+id/drawer_title" -->
+    <!--     android:layout_width="match_parent" -->
+    <!--     android:layout_height="wrap_content" -->
+    <!--     android:layout_centerVertical="true" -->
+    <!--     android:text="Hip VPN" -->
+    <!--     android:gravity="center" -->
+    <!--     android:textSize="32sp" -->
+    <!--     android:textColor="@android:color/white"/> -->
 </RelativeLayout>
