--- a/mobile/src/main/res/drawable/background_profile.xml
+++ b/mobile/src/main/res/drawable/background_profile.xml
@@ -11,7 +11,7 @@
                   android:exitFadeDuration="@android:integer/config_mediumAnimTime">
             <item android:state_selected="true">
                 <shape android:shape="rectangle">
-                    <solid android:color="@color/material_green_700" />
+                    <solid android:color="@color/hip_primary" />
                     <corners android:radius="4dp"/>
                 </shape>
             </item>
